well-updating-the-scratchpad-indicator

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -5,15 +5,18 @@
 	"name": "top-bar",
 	"layer": "top",
 	"position":"top",
+	"height": 32,
 	"width":0,
 	"spacing": 0,
 	"fixed-center": true,
-	"margin-left": 0,
-	"margin-right": 0,
+	"margin-left": 6,
+	"margin-right": 6,
+	"margin-top": 6,
+	"margin-bottom": 0,
 	
-		"modules-left": ["custom/launcher","sway/window"],
+		"modules-left": ["custom/launcher","custom/separator","sway/window"],
 		"modules-center": ["custom/loop","custom/previous","custom/media","custom/next","custom/shuffle"],
-		"modules-right": ["custom/notification","battery","clock",],
+		"modules-right": ["tray","custom/separator","custom/notification","custom/separator","pulseaudio","custom/separator","battery","custom/separator","clock",],
 	
 	"include": "~/.local/lu-dotfiles/components/waybar-components/Module.json",
 	},
@@ -23,15 +26,18 @@
 		"name": "bottom-bar",
 		"layer": "top",
 		"position":"bottom",
+		"height": 32,
 		"width":0,
 		"spacing": 0,
 		"fixed-center": true,
-		"margin-left": 0,
-		"margin-right": 0,
+		"margin-left": 6,
+		"margin-right": 6,
+		"margin-top": 0,
+		"margin-bottom": 6,
 		
-			"modules-left": ["sway/workspaces"],
-			"modules-center": ["wlr/taskbar"],
-			"modules-right": ["tray","pulseaudio"],
+			"modules-left": ["custom/scratchpadindicator","custom/separator","wlr/taskbar",],
+			"modules-center": [],
+			"modules-right": ["sway/workspaces"],
 		
 		"include": "~/.local/lu-dotfiles/components/waybar-components/Module.json",
 		},
